--- a/client/main.html
+++ b/client/main.html
@@ -1,3 +1,4 @@
 <head>
   <title>Flyp</title>
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
